Reverted test data builder class changes