@@ -43,6 +43,7 @@ import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -74,22 +75,29 @@ public class TestDataBuilder {
     }
 
     public static UserRequest buildUserRequest() {
-        List<String> users = List.of(id_1,id_2);
+        ArrayList<String> users = new ArrayList<>();
+        users.add(id_1);
+        users.add(id_2);
         return UserRequest.builder().userIds(users).build();
     }
 
     public static UserRequest buildBadUserRequest() {
-        List<String> users = List.of(id_1,id_2);
+        ArrayList<String> users = new ArrayList<>();
+        users.add(id_1);
+        users.add(id_3);
         return UserRequest.builder().userIds(users).build();
     }
 
     public static UserRequest buildUserRequestIndividual() {
-        List<String> users = List.of(id_1);
+        ArrayList<String> users = new ArrayList<>();
+        users.add(id_1);
         return UserRequest.builder().userIds(users).build();
     }
 
     public static UserRequest buildInvalidRequest() {
-        List<String> users = List.of(id_1,id_2);
+        ArrayList<String> users = new ArrayList<>();
+        users.add(id_1);
+        users.add(id_3);
         return UserRequest.builder().userIds(users).build();
     }
 
@@ -148,7 +156,7 @@ public class TestDataBuilder {
     public static List<CaseWorkerProfile.BaseLocation> buildListOfBaseLocations(boolean enableLocationList,
                                                                                 boolean primaryLocation1,
                                                                                 boolean primaryLocation2) {
-        List<CaseWorkerProfile.BaseLocation> baseLocationList = Collections.emptyList();
+        List<CaseWorkerProfile.BaseLocation> baseLocationList = new ArrayList<>();
         if (enableLocationList) {
             baseLocationList.add(buildBaseLocation(primaryLocation1));
             baseLocationList.add(buildBaseLocation(primaryLocation2));
@@ -165,7 +173,7 @@ public class TestDataBuilder {
     public static List<CaseWorkerProfile.WorkArea> buildListOfWorkAreas(boolean enableWorkAreaList,
                                                                         String workArea1,
                                                                         String workArea2) {
-        List<CaseWorkerProfile.WorkArea> workAreaList = Collections.emptyList();
+        List<CaseWorkerProfile.WorkArea> workAreaList = new ArrayList<>();
         if (enableWorkAreaList) {
             workAreaList.add(buildWorkArea(workArea1, "BFA1"));
             workAreaList.add(buildWorkArea(workArea2, "BFA2"));
@@ -231,7 +239,7 @@ public class TestDataBuilder {
                                                                   String workArea1,
                                                                   String workArea2,
                                                                   boolean suspended) {
-        List<CaseWorkerProfile> caseWorkerProfiles = Collections.emptyList();
+        List<CaseWorkerProfile> caseWorkerProfiles = new ArrayList<>();
         caseWorkerProfiles.add(buildUserProfile(id_1, multiRole, roleId1, roleId2, roleName1, roleName2,
                 enableLocationList, primaryLocation1, primaryLocation2,
                 enableWorkAreaList, workArea1, workArea2, suspended));
@@ -301,7 +309,7 @@ public class TestDataBuilder {
     }
 
     public static Collection<RoleAssignment> buildRequestedRoleCollection(Status status) {
-        Collection<RoleAssignment> requestedRoles = Collections.emptyList();
+        Collection<RoleAssignment> requestedRoles = new ArrayList<>();
         requestedRoles.add(buildRoleAssignment(status));
         requestedRoles.add(buildRoleAssignment(status));
         return requestedRoles;
@@ -548,16 +556,16 @@ public class TestDataBuilder {
 
         switch (setNumber) {
             case 1:
-                authorisationList = List.of(auth, auth2, auth3, auth4, auth5, auth6, auth7, auth8);
+                authorisationList = Arrays.asList(auth, auth2, auth3, auth4, auth5, auth6, auth7, auth8);
                 break;
             case 2:
-                authorisationList = List.of(auth, auth3, auth4, auth5, auth6);
+                authorisationList = Arrays.asList(auth, auth3, auth4, auth5, auth6);
                 break;
             case 3:
-                authorisationList = List.of(auth, auth3, auth4, auth9,  auth12);
+                authorisationList = Arrays.asList(auth, auth3, auth4, auth9,  auth12);
                 break;
             case 4:
-                authorisationList = List.of(auth, auth5, auth10, auth11);
+                authorisationList = Arrays.asList(auth, auth5, auth10, auth11);
                 break;
             default:
                 authorisationList = Collections.singletonList(auth);
